# erlabpy

./: .codecov.yml  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  PythonInterface.ipf  README.md  README.rst  environment.yml  environment_apple.yml  environment_intel.yml  environment_nogit.yml  environment_nogit_mkl.yml  manager.iss  manager.spec  prek-autoupdate-body.md  prek-autoupdate-commit.txt  pyproject.toml  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug-report.md  bug-report.yml  config.yml  feature-request.yml  feature_request.md
.github/workflows/: build.yml  changelog.yml  ci.yml  compat.yml  debug.yml  pr.yml  prek-autoupdate.yml  prek.yml  release.yml  test.yml
docs/: environment.yml  requirements.txt
docs/source/: bibliography.md  bibliography.rst  changelog.md  colormaps.rst  conf.py  contributing.md  contributing.rst  development.rst  erlab.accessors.rst  erlab.analysis.correlation.rst  erlab.analysis.fit.functions.rst  erlab.analysis.fit.models.rst  erlab.analysis.fit.rst  erlab.analysis.gold.rst  erlab.analysis.mask.polygon.rst  erlab.analysis.mask.rst  erlab.analysis.md  erlab.analysis.rst  erlab.analysis.transform.rst  erlab.analysis.utilities.rst  erlab.characterization.resistance.rst  erlab.characterization.rst  erlab.characterization.xrd.rst  erlab.constants.md  erlab.constants.rst  erlab.interactive.colors.rst  erlab.interactive.curvefittingtool.rst  erlab.interactive.exampledata.rst  erlab.interactive.fastbinning.rst  erlab.interactive.goldtool.rst  erlab.interactive.imagetool.rst  erlab.interactive.imagetool_mpl.rst  erlab.interactive.imagetool_old.rst  erlab.interactive.ktool.rst  erlab.interactive.ktool_new.rst  erlab.interactive.masktool.rst  erlab.interactive.md  erlab.interactive.noisetool.rst  erlab.interactive.rst  erlab.interactive.slicer.rst  (+46 more)
docs/source/_static/: custom.css
docs/source/notebooks/: indexing.ipynb  introduction.ipynb  io.ipynb  kconv.ipynb  plotting.ipynb
docs/source/pyplots/: norms.py
docs/source/user-guide/: curve-fitting.ipynb  filtering.ipynb  imagetool.md  imagetool.rst  index.md  index.rst  indexing.ipynb  io.ipynb  kconv.ipynb  plotting.ipynb  transform.ipynb  workflow-bridge.md
erlab/: __init__.py  accessors.py  constants.py  io.py  parallel.py  plotting.py
erlab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
erlab/analysis/: __init__.py  correlation.py  gold.py  interpolate.py  kspace.py  mask.py  transform.py  utilities.py
erlab/analysis/fit/: __init__.py  functions.py  models.py
erlab/analysis/mask/: __init__.py  comparison.py  mask.py  polygon.py
erlab/characterization/: __init__.py  resistance.py  xrd.py
erlab/interactive/: __init__.py  bzplot.py  colors.py  curvefittingtool.py  exampledata.py  fastbinning.py  goldtool.py  imagetool.py  imagetool_mpl.py  imagetool_old.py  ktool.py  ktool.ui  ktool_new.py  noisetool.py  slicer.py  utilities.py
erlab/interactive/imagetool/: __init__.py  controls.py  core.py  fastbinning.py  imagetool.py  slicer.py
erlab/io/: __init__.py  da30.py  igor.py  merlin.py  ssrl52.py  utilities.py
erlab/plotting/: __init__.py  annotations.py  atoms.py  bz.py  colors.py  erplot.py  general.py  imagetool.py  imagetool_mpl.py  imagetool_pg  interactive.py  ktool.py  noisetool.py  plot3d.py  qtprogress.py
erlab/plotting/IgorCT/: BlueHot.ibw  CTBlueWhite.ibw  CTRedTemperature.ibw  PlanetEarth.ibw  isolum.ibw
erlab/plotting/interactive/: __init__.py  colors.py  curvefittingtool.py  derivativetool.py  goldtool.py  imagetool.py  imagetool_mpl.py  imagetool_new.py  imagetool_old.py  itool_testing.ipynb  ktool.py  masktool.py  noisetool.py  run_itool.py  slicer.py  utilities.py
erlab/plotting/stylelib/: fira.mplstyle  khan.mplstyle  nature.mplstyle  poster.mplstyle  times.mplstyle
resources/: Assets.car
scripts/: __init__.py  _ci_test_groups.py  build_xps_reference.py  ci_test_groups.py  merge_junit_xml.py
skills/arpes-analysis/: SKILL.md
skills/arpes-analysis/references/: docs-links.md
src/erlab/: __init__.py  accessors.py  constants.py  lattice.py  parallel.py
src/erlab/accessors/: __init__.py  fit.py  general.py  kspace.py  utils.py
src/erlab/analysis/: __init__.py  __init__.pyi  correlation.py  derivative.py  gold.py  image.py  interpolate.py  kspace.py  mesh.py  transform.py  utilities.py  utils.py  xps.py
src/erlab/characterization/: __init__.py  resistance.py  xrd.py
src/erlab/interactive/: __init__.py  __init__.pyi  _colormap.py  _dask.py  _fit1d.py  _fit2d.py  _magic.py  _mesh.py  _plot_state.py  _qt_state.py  _stylesheets.py  _widgets.py  bzplot.py  (+18 more)
templates/: .macros.j2  .release_notes.md.j2  CHANGELOG.md.j2  pysemrel_CHANGELOG.md.j2
tests/: _qt_helpers.py  conftest.py  test-data.env  test_conftest.py  test_constants.py  test_fastbinning.py  test_fit_functions_dynamic.py  test_fit_functions_general.py  test_image.py  test_interpolate.py  test_kspace.py  test_lattice.py  test_utilities.py
tests/accessors/: test_fit.py  test_general.py  test_kspace.py
tests/analysis/: test_correlation.py  test_fastbinning.py  test_fit_functions_dynamic.py  test_fit_functions_general.py  test_fit_models.py  test_gold.py  test_image.py  test_image_savgol.py  test_interpolate.py  test_kspace.py  test_mask.py  test_mesh.py  test_transform.py  test_utils.py  test_xps.py
tests/interactive/: test_bzplot.py  test_colors.py  test_curvefittingtool  test_dask.py  test_derivative.py  test_explorer.py  test_fastbinning.py  test_fermiedge.py  test_fit1d.py  test_fit2d.py  test_imagetool.py  test_imagetool_manager.py  test_kspace.py  test_magic.py  test_mesh.py  test_options.py  test_options_parameters.py  test_options_tree.py  test_ptable.py  test_tools.py  test_utils.py
tests/io/: test_dataloader.py  test_exampledata.py  test_fitsutils.py  test_igor.py  test_io_utils.py  test_metadata.py
tests/plotting/: test_annotations.py  test_atoms.py  test_bz.py  test_colors.py  test_general.py  test_plot3d.py
tests/utils/: test_array.py  test_formatting.py  test_hashing.py  test_misc.py
(+399 files in other folders)
