[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "erlab"
authors = [{ name = "Kimoon Han", email = "khan@kaist.ac.kr" }]
description = "Python package for ARPES data analysis and visualization."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["Condensed Matter Physics", "ARPES"]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dynamic = ["version"]
dependencies = [
    "h5netcdf>=1.2.0",
    "igor2>=0.5.6",
    "joblib>=1.3.2",
    "lmfit>=1.2.0,!=1.3.0",
    "matplotlib>=3.8.0",
    "numba>=0.59.0",
    "numpy>=1.26.0",
    "pyperclip>=1.8.2",
    "pyqtgraph>=0.13.1",
    "qtawesome>=1.3.1",
    "qtpy>=2.4.1",
    "scipy>=1.12.0",
    "tqdm>=4.66.2",
    "uncertainties>=3.1.4",
    "varname>=0.13.0",
    "xarray>=2024.05.0",
]

[project.optional-dependencies]
complete = ["erlab[viz,perf,misc,dev]"]
viz = ["cmasher", "cmocean", "colorcet", "hvplot", "ipywidgets"]
perf = ["numbagg>=0.8.1", "bottleneck>=1.3.8"]
misc = ["iminuit>=2.25.2", "csaps>=1.1.0", "dask>=2024.4.1"]
dev = [
    "mypy",
    "pre-commit",
    "pytest-cov",
    "pytest-qt",
    "pytest-xdist",
    "pytest",
    "python-semantic-release",
    "ruff",
]
docs = [
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "sphinxcontrib-bibtex",
    "sphinx-qt-documentation",
    "pybtex",
    "nbsphinx",
    "furo",
    "sphinx-design",
]

[project.gui-scripts]
itool-manager = "erlab.interactive.imagetool.manager:main"

[project.urls]
Documentation = "https://erlabpy.readthedocs.io"
Repository = "https://github.com/kmnhan/erlabpy.git"
Issues = "https://github.com/kmnhan/erlabpy/issues"
Changelog = "https://github.com/kmnhan/erlabpy/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "erlab.__version__" }

[tool.setuptools_scm]

[tool.semantic_release]
assets = []
build_command = "pip install build && python -m build"
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"
commit_parser = "angular"
tag_format = "v{version}"
version_variables = ["src/erlab/__init__.py:__version__"]

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.changelog]
template_dir = "templates"
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = ["^Merge pull request #.*"]

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
    "tests",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false

[tool.semantic_release.remote.token]
env = "GH_TOKEN"

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "F",
    "E4",
    "E7",
    "E9",
    "W",
    "I",
    "D",
    "UP",
    "B",
    "C4",
    "FA",
    "ICN",
    "PIE",
    "PT",
    "Q",
    "RSE",
    "TID",
    "TCH",
    "INT",
    # "ARG",
    # "PTH",
    # "FIX",
    "TRY",
    "FLY",
    "NPY",
    "PERF",
    # "FURB",
    "RUF",
]
ignore = [
    "ICN001", # Import conventions
    "TRY003", # Long exception messages
    "D100",   # Missing docstring in public module
    "D101",   # Missing docstring in public class
    "D102",   # Missing docstring in public method
    "D103",   # Missing docstring in public function
    "D104",   # Missing docstring in public package
    "D105",   # Missing docstring in magic method
]
extend-select = []
allowed-confusables = [
    "×",
    "−",
    "𝑎",
    "𝒂",
    "𝑏",
    "𝒃",
    "𝑐",
    "𝑥",
    "𝑦",
    "𝑧",
    "𝛼",
    "γ",
    "𝛾",
    "ν",
    "α",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "src"
testpaths = "tests"

[tool.coverage.run]
source = ["src"]
omit = ["*/_deprecated/*"]
concurrency = ["multiprocessing", "thread"]

[tool.coverage.report]
exclude_also = [
    "@numba.njit",
    "@cfunc",
    "get_ipython()",
    "from IPython",
    "def mouseDragEvent",
    "def .*_drag",
    "def _link_splitters",
    "def draw_mode",
    "QtWidgets.QApplication(sys.argv)",
    "QtWidgets.QMessageBox.question",
    "if not qapp:",
    "if execute is None:",
    "qapp.exec()",
    'if __name__ == "__main__:"',
    "except varname.VarnameRetrievingError:",
    "if TYPE_CHECKING:",
    "def _wrapped_for_coverage",
]

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
allow_redefinition = true
check_untyped_defs = false
exclude = [
    "^docs/",
    "^tests/",
    "_deprecated/",
    "interactive/fermiedge.py",
    "interactive/bzplot.py",
    "interactive/curvefittingtool.py",
    "io/plugins/",
]

[[tool.mypy.overrides]]
module = [
    "astropy.*",
    "h5netcdf.*",
    "hvplot.*",
    "igor2.*",
    "iminuit.*",
    "ipywidgets.*",
    "joblib.*",
    "lmfit.*",
    "mpl_toolkits.*",
    "numba.*",
    "pyperclip.*",
    "pyqtgraph.*",
    "qtawesome.*",
    "scipy.*",
    "uncertainties.*",
    "varname.*",
]
ignore_missing_imports = true
