[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "erlab"
version = "2.9.0"
authors = [{ name = "Kimoon Han", email = "khan@kaist.ac.kr" }]
description = "Python package for ARPES data analysis and visualization."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["Condensed Matter Physics", "ARPES"]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    # If you change anything here, also update environment.yml and docs/requirements.txt
    "h5netcdf>=1.2.0",
    "igor2>=0.5.6",
    "joblib>=1.3.2",
    "lmfit>=1.3.2",
    "matplotlib>=3.8.0",
    "numba>=0.59.0",
    "numpy>=1.26.0",
    "pyperclip>=1.8.2",
    "pyqtgraph>=0.13.1",
    "qtawesome>=1.3.1",
    "qtpy>=2.4.1",
    "scipy>=1.13.0",
    "tqdm>=4.66.2",
    "uncertainties>=3.1.4",
    "varname>=0.13.0",
    "xarray>=2024.07.0",
]

[project.optional-dependencies]
complete = ["erlab[viz,perf,misc,dev]"]
viz = ["cmasher", "cmocean", "colorcet", "hvplot", "ipywidgets"]
perf = ["numbagg>=0.8.1", "bottleneck>=1.3.8"]
misc = ["iminuit>=2.25.2", "csaps>=1.1.0", "dask>=2024.4.1"]
dev = [
    "mypy",
    "pre-commit",
    "pytest-cov",
    "pytest-qt",
    "pytest-xdist",
    "pytest",
    "commitizen",
    "cz-changeup",
    "ruff",
]
docs = [
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "sphinxcontrib-bibtex",
    "sphinx-qt-documentation",
    "pybtex",
    "nbsphinx",
    "furo>=2024.07.18",
    "sphinx-design",
]

[project.gui-scripts]
itool-manager = "erlab.interactive.imagetool.manager:main"

[project.urls]
Documentation = "https://erlabpy.readthedocs.io"
Repository = "https://github.com/kmnhan/erlabpy.git"
Issues = "https://github.com/kmnhan/erlabpy/issues"
Changelog = "https://github.com/kmnhan/erlabpy/blob/main/CHANGELOG.md"

[tool.commitizen]
version_provider = "pep621"
update_changelog_on_bump = true
tag_format = "v$version"
changelog_start_rev = "v1.2.1"
changelog_merge_prerelease = true
name = 'cz_changeup'

# cz-changeup configuration
changeup_repo_base_url = "https://github.com/kmnhan/erlabpy"
changeup_show_body = true
changeup_body_indent = 2

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools_scm]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "D",
    "UP",
    "YTT",
    "ASYNC",
    "B",
    "A",
    "C4",
    # "DTZ",
    "FA",
    "ICN",
    "LOG",
    "G",
    "PIE",
    "PYI",
    "PT",
    "Q",
    "RSE",
    "RET",
    "SIM",
    "TID",
    "TCH",
    "INT",
    # "ARG",
    # "PTH",
    # "FIX",
    # "PLC",
    # "PLE",
    # "PLW",
    "TRY",
    "FLY",
    "NPY",
    "PERF",
    "FURB",
    "RUF",
]
ignore = [
    "PLW2901", # Outer variable  overwritten by inner target
    "ICN001",  # Import conventions
    "TRY003",  # Long exception messages
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package
    "D105",    # Missing docstring in magic method
]
extend-select = []
allowed-confusables = [
    "Ã—",
    "âˆ’",
    "ğ‘",
    "ğ’‚",
    "ğ‘",
    "ğ’ƒ",
    "ğ‘",
    "ğ‘¥",
    "ğ‘¦",
    "ğ‘§",
    "ğ›¼",
    "Î³",
    "ğ›¾",
    "Î½",
    "Î±",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "src"
testpaths = "tests"

[tool.coverage.run]
source = ["src"]
omit = ["*/_deprecated/*"]
concurrency = ["multiprocessing", "thread"]

[tool.coverage.report]
exclude_also = [
    "@numba.njit",
    "@cfunc",
    "get_ipython()",
    "from IPython",
    "def mouseDragEvent",
    "def .*_drag",
    "def _link_splitters",
    "def draw_mode",
    "QtWidgets.QApplication(sys.argv)",
    "QtWidgets.QMessageBox.question",
    "if not qapp:",
    "if execute is None:",
    "qapp.exec()",
    'if __name__ == "__main__:"',
    "except varname.VarnameRetrievingError:",
    "if TYPE_CHECKING:",
    "def _wrapped_for_coverage",
]

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
allow_redefinition = true
check_untyped_defs = false
exclude = [
    "^docs/",
    "^tests/",
    "_deprecated/",
    "interactive/fermiedge.py",
    "interactive/bzplot.py",
    "interactive/curvefittingtool.py",
    "io/plugins/",
]

[[tool.mypy.overrides]]
module = [
    "astropy.*",
    "h5netcdf.*",
    "hvplot.*",
    "igor2.*",
    "iminuit.*",
    "ipywidgets.*",
    "joblib.*",
    "lmfit.*",
    "mpl_toolkits.*",
    "numba.*",
    "pyperclip.*",
    "pyqtgraph.*",
    "qtawesome.*",
    "scipy.*",
    "uncertainties.*",
    "varname.*",
]
ignore_missing_imports = true
