[metadata]
name = erlab
version = 0.0.0
author = Kimoon Han
author_email = khan@kaist.ac.kr
description = Python macros for ERLab
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = erlab
python_requires = '>=3'
install_requires =
    numpy < 1.22
    numba >= 0.55.0
    scipy 
    astropy
    joblib
