[metadata]
name = erlab
version = 0.0.1
author = Kimoon Han
author_email = khan@kaist.ac.kr
description = Python macros for ERLab
long_description = file: README.md
long_description_content_type = text/markdown
keywords = ARPES
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires =
    numpy >= 1.22.0
    scipy 
    astropy
    joblib
    numba >= 0.56.2